--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,5 +7,10 @@
   <body>
     <h1>Pig Latinizer</h1>
   
+    <form method="POST" action="/piglatinize">
+    <label>Enter text: <input type="text" name="user_input" /></label><br/>
+    <input type="submit">
+    </form>
+
   </body>
 </html>
